--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -13719,9 +13719,10 @@ li.L9 {
 
 .text-dark-alt {
   color: #000777 !important;
-}t-size: 14px !important;
 }
-
+.font-14{
+  font-size: 14px !important;
+}
 .font-15 {
   font-size: 15px !important;
 }
