--- a/public/assets/css/inlineStyle.css
+++ b/public/assets/css/inlineStyle.css
@@ -1,2 +1,3 @@
 .alertTop{top: 80px;right: 20px;}
 .thumb-sm{object-fit: contain;}
+.modalLoader{position: fixed;top: 0;bottom: 0;left: 0;right: 0;display: flex;justify-content: center;align-items: center;}
